# in-Voice-project

./: .env.example  .gitignore  CLAUDE.md  account.js  contact_us.js  create_invoice.html  create_invoice.js  customer_info_page.js  dashboard.js  edit_account.js  index.html  invoice_library.js  invoice_preview.js  invoice_search.js  landing_page.html  landing_page.js  login.js  main.py  onboarding.js  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.local.json  signup.js  status.txt  style.css  temp.html  test_rpc.py  test_ui.html  vercel.json  vite.config.js
.claude/: settings.local.json
css/: account_page.css  color_scheme.css  contact_us.css  create_invoice.css  customer_info.css  dashboard.css  invoice_library.css  invoice_preview.css  landing_page.css  login_page.css  styles.css
docs/: README.md
js/: agent-stream.js  form-updater.js  recorder.js
pages/: account_page.html  contact_us.html  create-invoice.html  create_invoice.html  customer_info_page.html  dashboard.html  edit_account_page.html  invoice_library.html  invoice_preview.html  landing_page.html  login_page.html  onboarding.html  sign_up.html
scripts/: auth.js  invoice_storage.js  landing_auth.js
sdk/: invoice-sdk.js
src/: config.py
src/agent/: business_logic.py  events.py  extractor.py  logger.py  orchestrator.py  runner.py  tools.py
src/api/: auth.py  routes.py  schemas.py
tests/: conftest.py  test_business_logic.py  test_extractor_v2.py  test_models.py  test_orchestrator.py  test_routes.py  test_session_manager.py  test_supabase.py  test_tools.py
(+26 files in other folders)
