[project]
name = "ia-invoice"
version = "0.1.0"
description = "Invoice AI Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "supabase>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
